--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <a href="#" class="hire">Hire me</a>
@@ -66,11 +66,11 @@
                         <div class="social-card">
                             <p>You May Have Seen Me In :</p>
                             <div class="platforms_img">
-                                <a href="#"><img src="IMG/whatsapp.png" alt=""></a>
-                                <a href="#"><img src="IMG/linkedin.png" alt=""></a>
-                                <a href="#"> <img src="IMG/insta.png" alt=""></a>
-                                <a href="#"><img src="IMG/fb.png" alt="" class="fb"></a>
-                                <a href="#"><img src="IMG/github.png" alt="" class="github"></a>
+                                <a href="https://wa.me/qr/CLOXICLDGW22L1"><img src="IMG/whatsapp.png" alt=""></a>
+                                <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png" alt=""></a>
+                                <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="> <img src="IMG/insta.png" alt=""></a>
+                                <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt="" class="fb"></a>
+                                <a href="https://github.com/Sinan2526"><img src="IMG/github.png" alt="" class="github"></a>
                             </div>
                         </div>
                     </div>
@@ -273,11 +273,11 @@
                         </div>
 
                         <div class="f_social">
-                            <a href="#"><img src="IMG/whatsapp.png" alt="" width="32px"></a>
-                            <a href="#"><img src="IMG/linkedin.png" alt="" width="38px"></a>
-                            <a href="#"><img src="IMG/insta.png" alt="" width="32px"></a>
-                            <a href="#"><img src="IMG/fb.png" alt="" width="30px"></a>
-                            <a href="#"><img src="IMG/github.png" alt="" width="30px"></a>
+                            <a href="https://wa.me/qr/CLOXICLDGW22L1"><img src="IMG/whatsapp.png" alt="" width="32px"></a>
+                            <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png" alt="" width="38px"></a>
+                            <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="><img src="IMG/insta.png" alt="" width="32px"></a>
+                            <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt="" width="30px"></a>
+                            <a href="https://github.com/Sinan2526"><img src="IMG/github.png" alt="" width="30px"></a>
                         </div>
                         <p class="copyright">Copyright© 2025 Muhammed Sinan. All Rights Reserved</p>
                     </div>
