--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <body>
 
-<div class="custom-cursor"></div>
+    <div class="custom-cursor"></div>
 
     <header>
-         <div class="bg-blur2"></div>
+        <div class="bg-blur2"></div>
         <div class="navbar">
             <div class="logo">
                 <a href="#">Muhammed <span>Sinan</span></a>
@@ -67,10 +67,14 @@
                             <p>You May Have Seen Me In :</p>
                             <div class="platforms_img">
                                 <a href="https://wa.me/qr/CLOXICLDGW22L1"><img src="IMG/whatsapp.png" alt=""></a>
-                                <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png" alt=""></a>
-                                <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="> <img src="IMG/insta.png" alt=""></a>
-                                <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt="" class="fb"></a>
-                                <a href="https://github.com/Sinan2526"><img src="IMG/github.png" alt="" class="github"></a>
+                                <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png"
+                                        alt=""></a>
+                                <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="> <img
+                                        src="IMG/insta.png" alt=""></a>
+                                <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt=""
+                                        class="fb"></a>
+                                <a href="https://github.com/Sinan2526"><img src="IMG/github.png" alt=""
+                                        class="github"></a>
                             </div>
                         </div>
                     </div>
@@ -163,9 +167,9 @@
     </section>
 
     <section id="works">
-         <div class="bg-blur4"></div>
-         <div class="bg-blur6"></div>
-          <div class="bg-blur5"></div>
+        <div class="bg-blur4"></div>
+        <div class="bg-blur6"></div>
+        <div class="bg-blur5"></div>
         <div class="container">
             <div class="work-head">
                 <h4>Practice & Concept Projects</h4>
@@ -173,46 +177,49 @@
                     structure, and interface design.
                 </p>
             </div>
-            <div class="web-design">
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited1.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited2.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited3.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited4.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited5.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited6.png" alt="" width="100%">
-                </div>
-                <div class="design-cards">
-                    <img src="IMG/mockups/edited7.png" alt="" width="100%">
-                </div>
-            </div>
             <div class="web-title">
                 <h2>Web Design</h2>
+                <div class="web-design">
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited1.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited2.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited3.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited4.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited5.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited6.png" alt="" width="100%">
+                    </div>
+                    <div class="design-cards">
+                        <img src="IMG/mockups/edited7.png" alt="" width="100%">
+                    </div>
+                </div>
+
             </div>
+            <div class="mob-title">
+                <h2>App Design</h2>
             <div class="mobile-design">
+                <img src="IMG/mockups/Mobile Design/mockup4.png" alt="">
                 <img src="IMG/mockups/Mobile Design/workout.png" alt="">
                 <img src="IMG/mockups/Mobile Design/paul.png" alt="">
                 <img src="IMG/mockups/Mobile Design/sophia.png" alt="">
                 <img src="IMG/mockups/Mobile Design/happy.png" alt="">
             </div>
-            <div class="mob-title">
-                <h2>App Design</h2>
+            
             </div>
         </div>
     </section>
 
     <section id="contact">
-          <div class="bg-blur7"></div>
+        <div class="bg-blur7"></div>
         <div class="container">
             <div class="contact-card">
                 <div class="contact-title">
@@ -273,10 +280,14 @@
                         </div>
 
                         <div class="f_social">
-                            <a href="https://wa.me/qr/CLOXICLDGW22L1"><img src="IMG/whatsapp.png" alt="" width="32px"></a>
-                            <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png" alt="" width="38px"></a>
-                            <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="><img src="IMG/insta.png" alt="" width="32px"></a>
-                            <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt="" width="30px"></a>
+                            <a href="https://wa.me/qr/CLOXICLDGW22L1"><img src="IMG/whatsapp.png" alt=""
+                                    width="32px"></a>
+                            <a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux"><img src="IMG/linkedin.png"
+                                    alt="" width="38px"></a>
+                            <a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ=="><img
+                                    src="IMG/insta.png" alt="" width="32px"></a>
+                            <a href="https://www.facebook.com/share/1CvnbJnTiJ/"><img src="IMG/fb.png" alt=""
+                                    width="30px"></a>
                             <a href="https://github.com/Sinan2526"><img src="IMG/github.png" alt="" width="30px"></a>
                         </div>
                         <p class="copyright">Copyright© 2025 Muhammed Sinan. All Rights Reserved</p>
@@ -367,24 +378,27 @@
     </script>
 
     <script>
-        const cursor = document.querySelector('.custom-cursor');
-const hoverTargets = document.querySelectorAll('.hover-target');
+        $(document).ready(function () {
+            const $cursor = $('.custom-cursor');
 
-// Move the cursor with the mouse 📍
-document.addEventListener('mousemove', (e) => {
-    cursor.style.left = e.clientX + 'px';
-    cursor.style.top = e.clientY + 'px';
-});
+            // 1. Move the cursor 📍
+            $(document).on('mousemove', function (e) {
+                $cursor.css({
+                    left: e.clientX + 'px',
+                    top: e.clientY + 'px'
+                });
+            });
 
-// Trigger the "grow" effect on hover
-hoverTargets.forEach(target => {
-    target.addEventListener('mouseenter', () => {
-        cursor.classList.add('grow');
-    });
-    target.addEventListener('mouseleave', () => {
-        cursor.classList.remove('grow');
-    });
-});
+            // 2. Trigger the "grow" effect on everything 🎈
+            $('a, button, input, textarea, .apps, .web-design, .mobile-design').hover(
+                function () {
+                    $cursor.addClass('grow');
+                },
+                function () {
+                    $cursor.removeClass('grow');
+                }
+            );
+        });
     </script>
 
 </body>
