--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="shortcut icon" href="IMG/fav.png" type="image/x-icon">
 </head>
 
 <body>
@@ -39,11 +40,11 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#works">Works</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#hero" class="li">Home</a></li>
+                    <li><a href="#about" class="li">About</a></li>
+                    <li><a href="#skills" class="li">Skills</a></li>
+                    <li><a href="#works" class="li">Works</a></li>
+                    <li><a href="#contact" class="li">Contact</a></li>
                 </ul>
             </nav>
             <a href="#" class="hire">Hire me</a>
@@ -275,7 +276,7 @@
 
     <hr class="line">
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="contact_info">
@@ -314,7 +315,55 @@
 
             </div>
         </div>
+    </footer> -->
+
+    <footer class="portfolio-footer bg-black text-white pt-5 pb-2">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-lg-6 col-md-12 mb-4">
+                    <h3 class="footer-heading">Have an idea? Let's make it real.</h3>
+                    <p class="footer-text text-secondary">
+                        I design interfaces that feel effortless and work flawlessly. 
+                        Strategy first. Design second. Always user-focused.
+                    </p>
+                    <p class="footer-tagline">Designed with intention. Built with precision.</p>
+                </div>
+
+                <div class="col-lg-3 col-6 mb-4">
+                    <h3 class="footer-heading">Quick Links.</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="#hero">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#works">Works</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-6 mb-4">
+                    <h3 class="footer-heading">Connect with me.</h3>
+                    <div class="contact-info mb-3">
+                        <a href="mailto:muhammedsinan0522@gmail.com">muhammedsinan0522@gmail.com</a>
+                        <a href="tel:+919645362526">+919645362526</a>
+                    </div>
+                    <ul class="list-unstyled">
+                        <li><a href="https://wa.me/qr/CLOXICLDGW22L1">WhatsApp</a></li>
+                        <li><a href="https://www.linkedin.com/in/muhammed-sinan-ui-ux">LinkedIn</a></li>
+                        <li><a href="https://www.instagram.com/_sin._an?igsh=MWNtaHR2dzA2cjE1bQ==">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/share/1CvnbJnTiJ/">Facebook</a></li>
+                        <li><a href="https://github.com/Sinan2526">GitHub</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 overflow-hidden">
+                    <h1 class="footer-branding text-center">sinan</h1>
+                </div>
+            </div>
+        </div>
     </footer>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
