carousal hovering done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="bg-blur2"></div>
         <div class="navbar">
             <div class="logo">
-                <a href="#">Muhammed <span>Sinan</span></a>
+                <a href="#hero">Muhammed <span>Sinan</span></a>
             </div>
             <nav>
                 <ul>
@@ -47,7 +47,7 @@
                     <li><a href="#contact" class="li">Contact</a></li>
                 </ul>
             </nav>
-            <a href="#" class="hire">Hire me</a>
+            <a href="#contact" class="hire">Hire me</a>
         </div>
     </header>
     <section id="hero">
@@ -158,21 +158,21 @@
                     <div class="figma" data-aos="fade-up" data-aos-duration="600">
                         <img src="IMG/figma.png" alt="" class="glow" style="--glow-color:#F5725E;" width="86px">
                     </div>
-                    <div class="affinity"  data-aos="fade-up" data-aos-duration="700">
+                    <div class="affinity" data-aos="fade-up" data-aos-duration="700">
                         <img src="IMG/affinity.png" alt="" class="glow" style="--glow-color:#B5FF7E;" width="86px">
                     </div>
-                    <div class="ps"  data-aos="fade-up" data-aos-duration="900">
+                    <div class="ps" data-aos="fade-up" data-aos-duration="900">
                         <img src="IMG/ps.svg" alt="" class="glow" style="--glow-color:#30A7FD;" width="86px">
                     </div>
-                    <div class="html"  data-aos="fade-up" data-aos-duration="1100">
+                    <div class="html" data-aos="fade-up" data-aos-duration="1100">
                         <img src="IMG/html.png" alt="" class="glow" style="--glow-color:#FD7716;" width="86px">
                     </div>
-                    <div class="css"  data-aos="fade-up" data-aos-duration="1300">
+                    <div class="css" data-aos="fade-up" data-aos-duration="1300">
                         <img src="IMG/css.png" alt="" class="glow" style="--glow-color:#c38bfb;" width="86px">
                     </div>
-                  <div class="js" data-aos="fade-up" data-aos-duration="1500">
-                      <img src="IMG/js.png" alt="" class="glow" style="--glow-color:#FFDF00;" width="86px">
-                  </div>
+                    <div class="js" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="IMG/js.png" alt="" class="glow" style="--glow-color:#FFDF00;" width="86px">
+                    </div>
                     <div class="bootstrap" data-aos="fade-up" data-aos-duration="1700">
                         <img src="IMG/bootstrap.png" alt="" class="glow" style="--glow-color:#8E12FD;" width="126px">
                     </div>
@@ -197,25 +197,67 @@
                 <h2>Web Design</h2>
                 <div class="web-design">
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited1.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited1.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Primo</h5>
+                                <p>Product Landing Experience</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited2.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited2.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Mondly</h5>
+                                <p>Dashboard UI Concept</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited3.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited3.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>RACE Logistics</h5>
+                                <p>UI Redesign</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited4.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited4.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>REEN</h5>
+                                <p>Frontend Website Demo Project</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited5.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited5.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Industry Services Layout</h5>
+                                <p>Bootstrap Row & Column Demo</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited6.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited6.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Logistics Services UI</h5>
+                                <p>Frontend Demo</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-cards">
-                        <img src="IMG/mockups/edited7.png" alt="" width="100%">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/edited7.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Digital Banking</h5>
+                                <p>UI Landing Concept</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -223,11 +265,51 @@
             <div class="mob-title">
                 <h2>App Design</h2>
                 <div class="mobile-design">
-                    <img src="IMG/mockups/Mobile Design/mockup4.png" alt="">
-                    <img src="IMG/mockups/Mobile Design/workout.png" alt="">
-                    <img src="IMG/mockups/Mobile Design/paul.png" alt="">
-                    <img src="IMG/mockups/Mobile Design/sophia.png" alt="">
-                    <img src="IMG/mockups/Mobile Design/happy.png" alt="">
+                    <div class="design-cards">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/Mobile Design/happy.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Wellness Tracking App</h5>
+                                <p>UI Concept</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-cards">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/Mobile Design/mockup4.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>HelpUp</h5>
+                                <p>A mobile app concept connecting users with trusted local service providers.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-cards">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/Mobile Design/paul.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Wellness App</h5>
+                                <p>Mobile UI Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-cards">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/Mobile Design/sophia.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Workout Tracker</h5>
+                                <p>Mobile UI Concept</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-cards">
+                        <div class="card-inner">
+                            <img src="IMG/mockups/Mobile Design/workout.png" alt="" width="100%">
+                            <div class="card-overlay">
+                                <h5>Workout Session</h5>
+                                <p>Fitness App UI Concept</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -323,7 +405,7 @@
                 <div class="col-lg-6 col-md-12 mb-4">
                     <h3 class="footer-heading">Have an idea? Let's make it real.</h3>
                     <p class="footer-text text-secondary">
-                        I design interfaces that feel effortless and work flawlessly. 
+                        I design interfaces that feel effortless and work flawlessly.
                         Strategy first. Design second. Always user-focused.
                     </p>
                     <p class="footer-tagline">Designed with intention. Built with precision.</p>
@@ -340,7 +422,7 @@
                     </ul>
                 </div>
 
-                <div class="col-lg-3 col-6 mb-4">
+                <div class="col-lg-3 col-6 mb-4 connect">
                     <h3 class="footer-heading">Connect with me.</h3>
                     <div class="contact-info mb-3">
                         <a href="mailto:muhammedsinan0522@gmail.com">muhammedsinan0522@gmail.com</a>
