--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="abt_card_info">
                     <h4>About Me</h4>
-                    <p>I’m an aspiring <span>UI/UX designer and front-end developer</span> currently focused on building
+                    <p>I’m Muhammed Sinan, An aspiring UI/UX designer currently focused on building
                         strong
                         design fundamentals and practical skills.
                         My work emphasizes clean layouts, clear visual hierarchy, and user-centered thinking. I enjoy
